[package]
name = "http2"
version = "0.1.0"
authors = ["Chris von Zuben <chris.vonzuben@gmail.com>"]

[dependencies]
libc = "*"
lazy_static = "*"
krs_ssl = { path = "krs_ssl" }

#[dependencies.openssl]
#version = "0.7.10"
#features = ["ecdh_auto", "tlsv1_2", "alpn"]


[profile.dev]
opt-level = 0
debug = true
#rpath = false
lto = false
#debug-assertions = true
#codegen-units = 1
#panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
#codegen-units = 1
panic = 'abort'

#[profile.test]
#opt-level = 0
#debug = true
#rpath = false
#lto = false
#debug-assertions = true
#codegen-units = 1
#panic = 'unwind'
